@startuml
hide circle
skinparam linetype ortho

' ===================== NURSING =====================
package "Nursing Context" {

  entity "nursing_homes" as nursing_homes {
    * id : BIGINT
    --
    created_at        : DATETIME(6)
    updated_at        : DATETIME(6)
    business_profile_id : BIGINT
  }

  entity "residents" as residents {
    * id : BIGINT
    --
    created_at                        : DATETIME(6)
    updated_at                        : DATETIME(6)
    emergency_firstname               : VARCHAR(255)
    emergency_lastname                : VARCHAR(255)
    emergency_phone_number            : VARCHAR(255)
    legal_representative_firstname    : VARCHAR(255)
    legal_representative_lastname     : VARCHAR(255)
    legal_representative_phone_number : VARCHAR(255)
    person_profile_id                 : BIGINT
    resident_status                   : ENUM(...)
    nursing_home_id                   : BIGINT
    staff_member_id                   : BIGINT
  }

  entity "medications" as medications {
    * id : BIGINT
    --
    created_at         : DATETIME(6)
    updated_at         : DATETIME(6)
    low_stock_threshold: INT
    description        : VARCHAR(255)
    dosage             : VARCHAR(255)
    drug_presentation  : ENUM(...)
    expiration_date    : DATE
    name               : VARCHAR(255)
    amount             : INT
    resident_id        : BIGINT
  }

  entity "rooms" as rooms {
    * id : BIGINT
    --
    created_at      : DATETIME(6)
    updated_at      : DATETIME(6)
    room_number     : VARCHAR(255)
    capacity        : INT
    occupied        : INT
    room_status     : ENUM(...)
    type            : VARCHAR(255)
    nursing_home_id : BIGINT
    resident_id     : BIGINT
  }

  entity "medication_administrations" as medication_administrations {
    * id : BIGINT
    --
    created_at           : DATETIME(6)
    updated_at           : DATETIME(6)
    administered_at      : DATETIME(6)
    notes                : VARCHAR(500)
    quantity_administered: INT
    staff_member_id      : BIGINT
    was_administered     : BIT(1)
    medication_id        : BIGINT
    resident_id          : BIGINT
  }
}

' ===================== HCM =====================
package "HCM Context" {

  entity "staff" as staff {
    * id : BIGINT
    --
    created_at       : DATETIME
    updated_at       : DATETIME
    first_name       : VARCHAR
    last_name        : VARCHAR
    phone_number     : VARCHAR
    person_profile_id: BIGINT
    nursing_home_id  : BIGINT
  }

  entity "contracts" as contracts {
    * id : BIGINT
    --
    created_at      : DATETIME
    updated_at      : DATETIME
    start_date      : DATE
    end_date        : DATE
    contract_status : ENUM
    staff_role      : ENUM
    type_of_contract: VARCHAR
    work_shift      : ENUM
    staff_id        : BIGINT
  }
}

' ===================== IAM =====================
package "IAM Context" {

  entity "users" as users {
    * id : BIGINT
    --
    created_at : DATETIME(6)
    updated_at : DATETIME(6)
    password   : VARCHAR(120)
    username   : VARCHAR(50)
  }

  entity "roles" as roles {
    * id : BIGINT
    --
    name : ENUM(...)
  }

  entity "user_roles" as user_roles {
    * user_id : BIGINT
    * role_id : BIGINT
  }
}

' ===================== ANALYTICS =====================
package "Analytics Context" {

  entity "metrics" as metrics {
    * id : BIGINT
    --
    created_at     : DATETIME(6)
    updated_at     : DATETIME(6)
    event_date     : DATE
    metric_category: ENUM(...)
    metric_type    : ENUM(...)
    nursing_home_id: BIGINT
    value          : BIGINT
  }
}

' ===================== HEALTH =====================
package "Health Context" {

  entity "vital_signs" as vital_signs {
    * id : BIGINT
    --
    created_at    : DATETIME(6)
    updated_at    : DATETIME(6)
    measurement_id: BIGINT
    resident_id   : BIGINT
    severity_level: ENUM(...)
  }
}

' ===================== PROFILES =====================
package "Profiles Context" {

  entity "person_profiles" as person_profiles {
    * id : BIGINT
    --
    created_at   : DATETIME(6)
    updated_at   : DATETIME(6)
    email_address: VARCHAR(255)
    phone_number : VARCHAR(255)
    photo        : LONGTEXT
    street       : VARCHAR(255)
    number       : VARCHAR(255)
    city         : VARCHAR(255)
    postal_code  : VARCHAR(255)
    country      : VARCHAR(255)
    age          : INT
    birth_date   : DATE
    dni          : VARCHAR(255)
    first_name   : VARCHAR(255)
    last_name    : VARCHAR(255)
  }

  entity "business_profiles" as business_profiles {
    * id : BIGINT
    --
    created_at    : DATETIME(6)
    updated_at    : DATETIME(6)
    email_address : VARCHAR(255)
    phone_number  : VARCHAR(255)
    photo         : LONGTEXT
    street        : VARCHAR(255)
    number        : VARCHAR(255)
    city          : VARCHAR(255)
    postal_code   : VARCHAR(255)
    country       : VARCHAR(255)
    business_name : VARCHAR(255)
    ruc           : VARCHAR(255)
  }
}

' ===================== TRACKING =====================
package "Tracking Context" {

  entity "measurements" as measurements {
    * id : BIGINT
    --
    created_at      : DATETIME(6)
    updated_at      : DATETIME(6)
    systolic        : INT
    diastolic       : INT
    device_id       : VARCHAR(255)
    heart_rate      : INT
    oxygen_saturation: INT
    resident_id     : BIGINT
    respiratory_rate: INT
    temperature     : DOUBLE
    timestamp       : DATETIME(6)
  }
}

' ===================== PAYMENTS =====================
package "Payments Context" {

  entity "subscriptions" as subscriptions {
    * id : BIGINT
    --
    created_at          : DATETIME(6)
    updated_at          : DATETIME(6)
    amount_value        : DECIMAL(38,2)
    amount_currency     : VARCHAR(255)
    canceled_at         : DATETIME(6)
    current_period_end  : DATETIME(6)
    current_period_start: DATETIME(6)
    period              : ENUM(...)
    plan_type           : ENUM(...)
    status              : ENUM(...)
    stripe_customer_id  : VARCHAR(255)
    stripe_subscription_id: VARCHAR(255)
    user_id             : BIGINT
  }

  entity "payments" as payments {
    * id : BIGINT
    --
    created_at          : DATETIME(6)
    updated_at          : DATETIME(6)
    amount_value        : DECIMAL(38,2)
    amount_currency     : VARCHAR(255)
    failure_message     : VARCHAR(255)
    status              : ENUM(...)
    stripe_payment_intent_id: VARCHAR(255)
    stripe_receipt_url  : VARCHAR(1000)
    subscription_id     : BIGINT
    user_id             : BIGINT
  }
}

' ===================== ACTIVITIES =====================
package "Activities Context" {

  entity "activities" as activities {
    * id : BIGINT
    --
    created_at     : DATETIME(6)
    updated_at     : DATETIME(6)
    activity_date  : DATE
    area_code      : VARCHAR(255)
    name           : VARCHAR(255)
    nursing_home_id: BIGINT
    end_time       : TIME
    start_time     : TIME
    resident_id    : BIGINT
    staff_member_id: BIGINT
    status         : ENUM(...)
  }
}

' ===================== RELATIONSHIPS (FKs) =====================

' Nursing internals
nursing_homes ||--o{ residents                 : "1..*"
residents      ||--o{ medications              : "1..*"
residents      ||--o{ rooms                    : "0..*"
medications    ||--o{ medication_administrations : "1..*"
residents      ||--o{ medication_administrations : "1..*"
staff          ||--o{ medication_administrations : "1..*"

' HCM internals
staff      ||--o{ contracts : "1..*"

' IAM internals
users      ||--o{ user_roles : "1..*"
roles      ||--o{ user_roles : "1..*"

' Payments internals
users         ||--o{ subscriptions : "1..*"
subscriptions ||--o{ payments      : "1..*"
users         ||--o{ payments      : "1..*"

' Tracking & Health
residents     ||--o{ measurements  : "1..*"
measurements  ||--o{ vital_signs   : "1..*"
residents     ||--o{ vital_signs   : "1..*"

' Activities
nursing_homes ||--o{ activities    : "1..*"
residents     ||--o{ activities    : "0..*"
staff         ||--o{ activities    : "0..*"

' Analytics
nursing_homes ||--o{ metrics       : "1..*"

' Profiles
business_profiles ||--o{ nursing_homes : "1..*"
person_profiles   ||--o{ residents     : "1..*"
person_profiles   ||--o{ staff         : "1..*"

' Cross-context already covered above:
'  - staff.nursing_home_id -> nursing_homes.id (via relationship staff -- nursing_homes)
nursing_homes ||--o{ staff      : "1..*"
nursing_homes ||--o{ rooms      : "1..*"

@enduml
